# AdapticsEngine

./: .gitattributes  .gitignore  Cargo.toml  README.md  ThirdPartyNotices.html  about.hbs  about.toml  build.rs  package-lock.json
.github/workflows/: pattern-evaluator-ci.yml
adaptics-engine/: .gitignore  Cargo.toml  build-pkg.sh  build.rs
adaptics-engine/bindings/c/: adapticsengine.h
adaptics-engine/bindings/csharp/: AdapticsEngineInterop.cs
adaptics-engine/bindings/websocket/: AdapticsWSServerMessage.d.ts  AdapticsWSServerMessage.json
adaptics-engine/src/: lib.rs  main.rs  util.rs
adaptics-engine/src/threads/: common.rs  mod.rs
adaptics-engine/src/threads/net/: websocket.rs
adaptics-engine/src/threads/pattern/: mod.rs  pattern_eval.rs  playback.rs
adaptics-engine/src/threads/streaming/: hapticglove.rs  mock.rs  mod.rs  ulhaptics.rs
adaptics-engine/src/threads/streaming/hapticglove/: glovedriver.rs
adaptics-engine/src/threads/streaming/ulhaptics/: ffi.rs  ulh3-streaming.cpp
adaptics-engine/src/threads/tracking/: leapmotion.rs  mod.rs
adaptics-engine/src/threads/tracking/leapmotion/: ffi.rs  lmc-track.cpp
adaptics-engine/tests/: gen-bindings.rs
adaptics-pattern-evaluator/: .gitignore  Cargo.toml  bench-graphs.wls  build-pkg.sh  package-lock.json
adaptics-pattern-evaluator/src/: atformula_parser.rs  create_types_json_schema.rs  pattern_evaluator.rs  shared_types.rs
adaptics-pattern-evaluator/tests/: bench.rs  test_parse_old_revisions.rs
adaptics-pattern-evaluator/tests/old-patterns/: BenchRain.adaptics  BenchRainMoreFormulas.adaptics
leapc-dyn-sys/: Cargo.toml  LICENSE  build.rs  wrapper.h
leapc-dyn-sys/src/: lib.rs
mah-driver-server/: Cargo.toml  build-pkg.sh  build.rs
mah-driver-server/bindings/csharp/: AdapticsEngine.cs  AdapticsEngineInterop.cs
mah-driver-server/src/: common.rs  jsrunner.rs  lib.rs  main.rs  network.rs  pattern_eval_thread.rs  ulh3-streaming.cpp  ulh3-streaming.h  websocket.rs
mah-driver-server/src/threads/: common.rs  mod.rs
mah-driver-server/src/threads/net/: old_tokio_network.rs  websocket.rs
mah-driver-server/src/threads/pattern/: pattern_eval.rs
mah-driver-server/src/threads/streaming/: mock.rs  ulhaptics.rs
mah-driver-server/src/threads/streaming/ulhaptics/: ulh3-streaming.cpp
mah-driver-server/src/threads/tracking/: leapmotion.rs  mod.rs
mah-driver-server/src/threads/tracking/leapmotion/: ffi.rs  lmc-track.cpp  lmc-track.h
mah-driver-server/tests/: gen-bindings.rs
mah-pattern-evaluator/: Cargo.toml  build-pkg.sh  build-wasm.ps1  package-lock.json  types.json
mah-pattern-evaluator/src/: create_types_json_schema.rs  lib.rs  main.rs  pattern_evaluator.rs  shared_types.rs
src/: jsrunner.rs  main.rs  network.rs  ulh3-streaming.cpp  ulh3-streaming.h
