[package]
name = "adaptics-engine"
description = "Playback engine for Adaptics patterns"
version = "0.6.4"
edition = "2021"
# links = "UltraleapHaptics" # note that both UltraleapHaptics and LeapC are linked with cxx
# publish = false # due to linking to both UltraleapHaptics and LeapC with cxx (?)
license = "MPL-2.0"
repository = "https://github.com/AdaptiveHaptics/AdapticsEngine"
homepage = "https://github.com/AdaptiveHaptics"

[[bin]]
name = "adaptics-engine-cli"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.5"
adaptics-pattern-evaluator = { path = "../adaptics-pattern-evaluator", version = "0.6" }
leapc-dyn-sys = { path = "../leapc-dyn-sys", version = "0.2" }
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
# thread-priority = "0.13"
spin_sleep = "1.2"

# ulhaptics
cxx = "1.0"

#websockets
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

# for Unity/c# bindings
interoptopus = "0.14.18"
interoptopus_backend_csharp = "0.14.18"
interoptopus_backend_c = "0.14.18"

[build-dependencies]
cxx-build = "1.0"