[package]
name = "leapc-dyn-sys"
description = "Dynamically linking bindings for the LeapC API"
version = "0.2.0"
edition = "2021"
links = "LeapC"
license = "MIT"
repository = "https://github.com/AdaptiveHaptics/AdapticsEngine"
homepage = "https://github.com/AdaptiveHaptics"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "^0.8.0"


[build-dependencies]
bindgen = "^0.66.1"