[package]
name = "xk-web-midair-haptic-driver-rust"
version = "0.1.0"
edition = "2021"
links = "UltraleapHaptics"

[dependencies]
crossbeam-channel = "0.5"
mah-pattern-evaluator = { path = "../mah-pattern-evaluator" }
serde = "1.0"
serde_json = "1.0"

# ulhaptics
cxx = "1.0"

#websockets
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"

[build-dependencies]
cxx-build = "1.0"