[package]
name = "adaptics-engine"
version = "0.2.1"
edition = "2021"
links = "UltraleapHaptics"

[dependencies]
crossbeam-channel = "0.5"
mah-pattern-evaluator = { path = "../mah-pattern-evaluator", version = "0.2" }
serde = "1.0"
serde_json = "1.0"
# thread-priority = "0.13"

# ulhaptics
cxx = "1.0"

#websockets
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.1.6", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"
