[package]
name = "adaptics-engine"
version = "0.3.0"
edition = "2021"
links = "UltraleapHaptics"


[[bin]]
name = "adaptics-engine-cli"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.5"
mah-pattern-evaluator = { path = "../mah-pattern-evaluator", version = "0.3" }
serde = "1.0"
serde_json = "1.0"
# thread-priority = "0.13"

# ulhaptics
cxx = "1.0"

#websockets
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"
clap = { version = "4.1.6", features = ["derive"] }

# for Unity/c# bindings
interoptopus = "0.14.18"
interoptopus_backend_csharp = "0.14.18"

[build-dependencies]
cxx-build = "1.0"
