[package]
name = "mah-pattern-evaluator"
version = "0.1.0"
edition = "2021"

[lib]
name = "pattern_evaluator"
path = "src/lib.rs"

[[bin]]
name = "create_types_json_schema"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.11"
rand = "0.8.5"