[package]
name = "mah-pattern-evaluator"
version = "0.1.0"
edition = "2021"

# [target.'cfg(target_arch = "wasm32")'.features]
# default = ["rand/wasm-bindgen"]

[lib]
crate-type = ["cdylib"]
name = "pattern_evaluator"
path = "src/lib.rs"

[[bin]]
name = "create_types_json_schema"
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"]}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.11"
rand = "0.8.5"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
