[package]
name = "mah-pattern-evaluator"
version = "0.2.0"
edition = "2021"

# [target.'cfg(target_arch = "wasm32")'.features]
# default = ["rand/wasm-bindgen"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pattern_evaluator"
path = "src/pattern_evaluator.rs"

[[bin]]
name = "create_types_json_schema"
path = "src/create_types_json_schema.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"]}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
# ts-rs = "6.2"
rand = "0.8"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
